# uk-gdp-regime-forecasting

./: CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: regime_dates.yaml
report/chapters/: ch2_literature_review.md  ch3_methodology.md  ch4_implementation.md  ch5_results.md  ch6_conclusion.md
tests/: test_placeholder.py
